Use ThreadLocal to get driver instance to support parallel tests